--- a/web/views/scoreboard.html
+++ b/web/views/scoreboard.html
@@ -25,12 +25,12 @@
     	</div>
 	</div>
 	<div class="container main">
-		<div class="navbar" style="background:#f7f7f7 !important">
+		<div class="navbar navbar-inverse">
 			<a class="navbar-brand" href="/"><?=navbar_title?></a>
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="/">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="/submit">Submit</a></li>
-				<li><a href="/scoreboard">Scoreboard</a></li>
+				<li  class="active"><a href="/scoreboard">Scoreboard</a></li>
 				<li><a href="/SAMPLE_DATA.zip">Sample Data</a></li>
 				<li><a href="/#helpbox">Help</a></li>
 			</ul>
